# framework.uifw.e17-extra-config-modules

./: .gitignore  AUTHORS  COPYING  e17-extra-config-modules.efl  e17-extra-config-modules.manifest  e17-extra-config-modules.rule
backkey-tizen/: Makefile.am  configure.ac  module.desktop.in
backkey-tizen/data/: Makefile.am
backkey-tizen/include/: e_mod_backkey.h  e_mod_backkey_define.h  e_mod_backkey_log.h
backkey-tizen/scripts/: Makefile.am  e17-extra-config-modules.patch.sh
backkey-tizen/src/: Makefile.am  e_backkey_util.c  e_mod_backkey_event.c  e_mod_backkey_event.h  e_mod_main.c  e_mod_main.h
config-slp/: configure.ac  module.desktop.in
config-slp/src/: Makefile.am  e_mod_main.c  e_mod_main.h
config-tizen/: configure.ac  module.desktop.in
config-tizen/src/: Makefile.am  e_mod_main.c  e_mod_main.h
debian/: changelog  control  e17-extra-private-modules.install  rules
packaging/: e17-extra-config-modules.changes  e17-extra-config-modules.spec  e17-extra-private-modules.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  es_ES.po  es_MX.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+9 more)
shot-tizen/: AUTHORS  Makefile.am  configure.ac  module.desktop.in
shot-tizen/data/: Makefile.am  shot_effect.edc
shot-tizen/data/sounds/: Makefile.am
shot-tizen/src/: Makefile.am  e_mod_main.c
